<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:srcCompat="@mipmap/bballicon"
        android:id="@+id/AwayTeamLogo"
        android:contentDescription="@string/away_team_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TeamName"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/awayname"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp" />

    <TextView
        android:text="@string/gamedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GameDate"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp" />

</LinearLayout>